--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/webpack": "5",
     "babel-loader": "8",
     "compression-webpack-plugin": "9",
+    "gulp": "^5.0.0",
     "react_ujs": "^3.2.0",
     "shakapacker": "7.2.0",
     "terser-webpack-plugin": "5",
