rm unnecessary lines

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
   timezone: 'UTC'
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: db-development
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
