--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "@babel/preset-env": "7",
     "@babel/runtime": "7",
     "@types/babel__core": "7",
-    "@types/webpack": "5",
-    "babel-loader": "8",
-    "compression-webpack-plugin": "9",
+    "babel-loader": "^8.2.4",
+    "compression-webpack-plugin": "^9.0.0",
     "gulp": "^5.0.0",
     "shakapacker": "7.2.0",
-    "terser-webpack-plugin": "5",
-    "webpack": "5",
-    "webpack-assets-manifest": "5",
-    "webpack-cli": "4",
+    "terser-webpack-plugin": "^5.1.0",
+    "webpack": "^5.72.0",
+    "webpack-assets-manifest": "^5.2.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.4",
     "webpack-merge": "5"
   },
   "version": "0.1.0",
