--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "archios",
   "private": true,
   "dependencies": {
     "@babel/core": "7",
@@ -30,5 +30,8 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.24.1",
     "webpack-dev-server": "4"
+  },
+  "scripts": {
+    "start": "bundle exec rails server"
   }
 }
