adding t-mail db table, added tmail checkbox to employee view

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@babel/plugin-transform-runtime": "7",
     "@babel/preset-env": "7",
     "@babel/runtime": "7",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/babel__core": "7",
     "babel-loader": "^8.2.4",
+    "bootstrap": "^5.3.3",
     "compression-webpack-plugin": "^9.0.0",
     "gulp": "^5.0.0",
+    "jquery": "^3.7.1",
     "node": "^18.20.2",
     "shakapacker": "7.2.0",
     "terser-webpack-plugin": "^5.1.0",
